# it-claws

./: .gitignore  Dockerfile  README.md  ZIPPATH.md  claw-prize-schema.json  pyproject.toml  requirements.txt
.github/workflows/: build  build-dll-dev.yml  build.yml  docker_image.yml  release.yml
install-it/: .gitignore  groups.json
install-it/conf/: groups.json
scripts/: README.md  entry_point.sh  rclone_upload.sh
src/: archive.py  config.py  driver_claw.py  main.py  url.py
src/it_claws/: archive.py  engine.py  main.py  models.py  presets.py  scrapers.py  sevenz.py
src/it_claws/presets/: default.txt
tests/: test_archive.py
