[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "it-claws"
version = "1.0.0"
description = "Automated concurrent companion scraper for staging PC deployment environments"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "PC Builder Support", email = "support@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "selenium>=4.20.0",
    "fake-useragent>=1.5.1",
    "inquirer>=3.2.4",
    "tqdm>=4.66.0",
]

[project.scripts]
it-claws = "it_claws.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/it_claws"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["it_claws"]
combine-as-imports = true
